--- a/index.css
+++ b/index.css
@@ -3,34 +3,63 @@ body {
 }
 
 .wrapper {
+    height: calc(100vh - 80px);
+    width: calc(100vw - 80px);
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 100px 100px 100px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     background-color: #fff;
     color: #444;
   }
 
   .box {
-    background-color: #444;
-    color: #fff;
+    background-color: teal;
+    color: black;
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
-
   }
 
   .a {
-    grid-column: 1 / span 2;
+    grid-column: 1;
+    grid-row: 1 / span 2;
+    position: relative;
+    z-index: 0;
+  }
+
+  .item-a {
+    background-color: beige;
+    border: 2px solid black;
+    border-radius: 5px;
+    display: flex;
+    height: calc(100% - 2px);
+    width: calc(100% - 2px);
+    align-items: center;
+    justify-content: center;
   }
   .b {
-    grid-column: 3 ;
-    grid-row: 1 / span 2;
+    grid-column: 2;
+    grid-row: 2 / span 2;
   }
   .c {
-    grid-column: 1 ;
-    grid-row: 2 ;
+    margin-top: 15px;
+    border-radius: 50%;
+    transform: translateY(10px);
+    grid-column: 1;
+    grid-row: 3 / span 3 ;
   }
   .d {
-    grid-column: 2 ;
-    grid-row: 2 ;
+    grid-column: 2;
+    grid-row: 4 / span 2 ;
+  }
+  .triangle {
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 40px solid darkslategray;
+    transform: rotate(-45deg);
+    position: absolute;
+    z-index: 1;
   }
