--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body {
     width: calc(100vw - 80px);
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr 50px 1fr;
+    grid-template-rows: repeat(4, 1fr);
     background-color: #fff;
     color: #444;
   }
@@ -16,7 +16,6 @@ body {
   .box {
     background-color: teal;
     color: black;
-    border-radius: 5px;
     padding: 20px;
     font-size: 150%;
   }
@@ -31,7 +30,6 @@ body {
   .item-a {
     background-color: beige;
     border: 2px solid black;
-    border-radius: 5px;
     display: flex;
     height: calc(100% - 2px);
     width: calc(100% - 2px);
@@ -39,7 +37,7 @@ body {
     justify-content: center;
   }
   .b {
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 2 / span 2;
   }
   .c {
@@ -50,15 +48,15 @@ body {
     grid-row: 3 / span 3 ;
   }
   .d {
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 4 / span 2 ;
   }
   .triangle {
     width: 0;
     height: 0;
-    border-left: 40px solid transparent;
-    border-right: 40px solid transparent;
-    border-bottom: 40px solid darkslategray;
+    border-left: 100px solid transparent;
+    border-right: 100px solid transparent;
+    border-bottom: 100px solid darkslategray;
     transform: rotate(-45deg);
     position: absolute;
     z-index: 1;
