--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     width: calc(100vw - 80px);
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 1fr 50px 1fr;
+    grid-template-columns: minmax(289px, 1fr) 50px 1fr;
     grid-template-rows: repeat(5, 1fr);
     background-color: #fff;
     color: #444;
